src/test/ui/parser/keyword-impl-as-identifier.stderr
error: expected pattern, found keyword `impl`
  --> $DIR/keyword-impl-as-identifier.rs:4:9
   |
LL |     let impl = "foo";
   |         ^^^^ expected pattern

error: aborting due to previous error

